Atualização e Conectando com o Frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,18 @@ spring.application.name=encenape-backend
 
 # conexão com o banco de dados
 spring.datasource.url=jdbc:mysql://localhost:3306/encenape_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=gabriel@123&$
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# --- Configuração de Email (SMTP do Gmail) ---
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=gabrielpmoneta@gmail.com
+spring.mail.password=nkia cqqy vwek wsxi
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
