atualização e criação de arquivos para ingressos e segurança

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,11 @@ spring.mail.username=gabrielpmoneta@gmail.com
 spring.mail.password=nkia cqqy vwek wsxi
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# --- Configuração JWT ---
+# IMPORTANTE: Gere uma chave secreta FORTE e aleatória (mínimo 64 caracteres)
+# Use um gerador online (ex: https://www.uuidgenerator.net/version4) ou digite algo bem longo
+# NÃO use esta chave de exemplo em produção!
+app.jwt.secret=cd2f083b-8213-440a-8ea4-efb8429ca1a1
+app.jwt.expiration-ms=86400000  
+# Tempo de expiração em milissegundos (24 horas)
