--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # IMPORTANTE: Gere uma chave secreta FORTE e aleatória (mínimo 64 caracteres)
 # Use um gerador online (ex: https://www.uuidgenerator.net/version4) ou digite algo bem longo
 # NÃO use esta chave de exemplo em produção!
-app.jwt.secret=cd2f083b-8213-440a-8ea4-efb8429ca1a1
+app.jwt.secret=   cd2f083b-8213-440a-8ea4-efb8429ca1a138a652f2-6e95-4d51-a59c-67403456392eb537fc13-3d78-4f96-a182-2ac5e33d513b
 app.jwt.expiration-ms=86400000  
 # Tempo de expiração em milissegundos (24 horas)
